# compra-tu-hogar

./: .env.docker  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  prometheus.yml
.github/: ci.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  local_database.db  pyproject.toml  test.db
backend/app/: main.py
backend/app/api/: admin.py  auth.py  client.py  listing.py  propertiy.py  real_estate.py  stats.py
backend/app/core/: auth.py  config.py  database.py  enums.py  security.py
backend/app/model/: __init__.py  admin.py  client.py  favorite.py  listing.py  property.py  real_estate.py  review.py  user.py
backend/app/schema/: admin.py  client.py  favorite.py  listing.py  property.py  real_estate.py  review.py  stats.py  user.py
backend/app/seeds/: admin_seed.py  buyers.py  client_seed.py  listing_seed.py  property_seed.py  real_estate_seed.py  review_seed.py  seed.py
backend/app/service/: admin_service.py  auth_service.py  client_service.py  listing_service.py  property_service.py  real_estate_service.py
backend/tests/: conftest.py
backend/tests/arch/: test_api.py  test_general.py  test_import_rules.py  test_model.py  test_schema.py  test_service.py  utils.py
backend/tests/integration/: integration_tests.py  test_client_api.py  test_real_estate_api.py
backend/tests/model/: test_property.py  test_user.py
backend/tests/unit/model/: test_property.py  test_user.py
backend/tests/unit/service/: test_client_service.py  test_listing_service.py
frontend/: Dockerfile  cucumber.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FloatingInput.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/features/: adminFlow.feature  login.feature  (+1 more)
k8s/: backend.yaml  frontend.yaml  secrets.yaml
load-tests/: data.js  helpers.js  load_properties.js  purchase_flow.js  realistinc_flow.js  smoke_login.js  stress_properties.js  users.js
(+87 files in other folders)
